--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,36 @@
-<p>about works!</p>
+<!--
+  Title: about.component.html
+  Author: Zadkiel Rodriguez Alvarado
+  Date: 4/19/2024
+  Description: About component html
+-->
+<br><br><br>
+<div fxLayout="row wrap" class="main-container">
+  <mat-card>
+    <mat-card-title class="title red">
+      About us
+    </mat-card-title>
+
+    <br>
+    <hr>
+    <br>
+    <mat-card-content>
+      <div fxFlex style="text-align: center;">
+        <div>
+          <img src="./assets/Gryffindor-Logo.png" alt="Gryffindor-Logo" class="logo">
+        </div>
+        <div>
+          <em>
+            Photo by Logos-World - <a class="attribution-link" href="https://logos-world.net/gryffindor-logo/" target="_blank">Logos World</a>
+          </em>
+        </div>
+      </div>
+
+      <div fxFlex class="about-right">
+        <p>
+          At GryffinBank, we're more than just a financial institution - we're your trusted partner on the path to financial success. Founded with a commitment to integrity, innovation, and customer-centrality, GryffinBank has been serving individuals, families, and businesses for decades. Our mission is simple: to empower our customers to achieve their financial goals, whatever they may be. Whether you're saving for your first home, planning for retirement, or growing your business, GryffinBank is here to provide the support and guidance you need every step of the way. What sets GryffinBank apart is our unwavering dedication to personalized service. We believe that every customer is unique, and we take the time to understand your individual needs and aspirations. Our team of experienced financial professionals is committed to providing tailored solutions that align with your goals and priorities. With GryffinBank, you can trust that your financial future is in good hands. From our comprehensive range of banking products and services to our innovative digital solutions, we strive to make managing your finances simple, convenient, and rewarding. Join GryffinBank today and experience the difference for yourself. Discover the peace of mind that comes from banking with a partner you can trust. Welcome to GryffinBank - where your success is our priority.
+        </p>
+      </div>
+    </mat-card-content>
+  </mat-card>
+</div>
