--- a/src/app/base-layout/base-layout.component.html
+++ b/src/app/base-layout/base-layout.component.html
@@ -1,1 +1,24 @@
-<p>base-layout works!</p>
+<!--
+  Title: base-layout.component.html
+  Author: Zadkiel Rodriguez Alvarado
+  Date: 5/10/2024
+  Description: Base layout component html
+-->
+<mat-toolbar class="toolbar">
+  <mat-toolbar-row>
+    <div style="width: 100%;">
+      <div fxLayout="row wrap" fxLayoutAlign="end start">
+        <button mat-button routerLink="/">Home</button>
+        <button mat-button routerLink="/loan">Loans</button>
+        <button mat-button routerLink="/about">About</button>
+        <button mat-button routerLink="/contact">Contact Us</button>
+      </div>
+    </div>
+  </mat-toolbar-row>
+</mat-toolbar>
+
+<div fxLayout="row wrap">
+  <div fxFlex>
+    <router-outlet></router-outlet>
+  </div>
+</div>
