--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,39 +1,68 @@
-
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
-@import '~@angular/material/theming';
-// Plus imports for other components in your app.
-
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
-@include mat-core();
-
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$loan-app-primary: mat-palette($mat-indigo);
-$loan-app-accent: mat-palette($mat-pink, A200, A100, A400);
-
-// The warn palette is optional (defaults to red).
-$loan-app-warn: mat-palette($mat-red);
-
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
-$loan-app-theme: mat-light-theme((
-  color: (
-    primary: $loan-app-primary,
-    accent: $loan-app-accent,
-    warn: $loan-app-warn,
-  )
-));
-
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
-@include angular-material-theme($loan-app-theme);
-
+/*
+  Title: styles.scss
+  Author: Zadkiel Rodriguez Alvarado
+  Date: 5/10/2024
+  Description: App styling
+*/
 /* You can add global styles to this file, and also import other style files */
+@import './theme';
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Poppins;
+}
+
+.red {
+  color: #E53935;
+}
+
+.orange {
+  color: #FB8C00;
+}
+
+.logo {
+  width: 500px;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.italic {
+  font-style: italic;
+}
+
+.title {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 4rem;
+  text-shadow: 1px 1px 2px black;
+  padding: 20px;
+}
+
+.sub-title {
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  text-shadow: 1px 1px 2px black;
+  padding: 10px;
+}
+
+.attribution-link {
+  text-decoration: none;
+  color: white;
+}
+
+.attribution-link:hover {
+  text-decoration: underline;
+}
+
+hr {
+  width: 100%;
+  height: 2px;
+  background-color: #000;
+  border: none;
+}
