Added code attribution

--- a/src/app/auth-layout/auth-layout.component.html
+++ b/src/app/auth-layout/auth-layout.component.html
@@ -1,1 +1,6 @@
-<p>auth-layout works!</p>
+<!--
+  Title: auth-layout.component.html
+  Author: Zadkiel Rodriguez Alvarado
+  Date: 5/11/2024
+  Description: Auth layout component
+-->
