--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,6 @@
-<p>contact works!</p>
+<!--
+  Title: contact.component.html
+  Author: Zadkiel Rodriguez Alvarado
+  Date: 5/11/2024
+  Description: Contact component
+-->
