--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,1 +1,6 @@
-<p>sign-in works!</p>
+<!--
+  Title: sign-in.component.html
+  Author: Zadkiel Rodriguez Alvarado
+  Date: 5/11/2024
+  Description: Sing in component
+-->
