Contact page added

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -4,13 +4,8 @@
   Date: 5/11/2024
   Description: About component styling
 */
-.main-container {
-  padding-top: 25px;
-  width: 80%;
-  margin: 0 auto;
-}
-
 .about-right {
   padding: 20px;
   line-height: 2;
+  font-size: 1rem;
 }
