--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -4,3 +4,8 @@
   Date: 5/11/2024
   Description: Contact styling
 */
+.card-title-icon, .mat-icon {
+  font-size: 72px;
+  text-align: center;
+  padding-right: 25px;
+}
