--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,7 +26,7 @@
 
 <div fxLayout="row" fxLayoutAlign="center" fxLayoutGap="20px">
   <mat-card fxFlex="50">
-    <mat-card-title class="red sub-title text-center">Customer Review 1</mat-card-title>
+    <mat-card-title class="red sub-title text-center">Customer Review</mat-card-title>
     <hr>
     <mat-card-content>
       <p class="review">I've been a customer of GryffinBank for years, and they've always exceeded my expectations. Great job! The staff is friendly and helpful, and I've never had any issues with my accounts. I highly recommend GryffinBank to anyone looking for a reliable and trustworthy bank.</p>
@@ -34,7 +34,7 @@
   </mat-card>
 
   <mat-card fxFlex="50">
-    <mat-card-title class="red sub-title text-center">Customer Review 2</mat-card-title>
+    <mat-card-title class="red sub-title text-center">Customer Review</mat-card-title>
     <hr>
     <mat-card-content>
       <p class="review">This is a fantastic bank with excellent customer service. I highly recommend it to everyone! I've been banking with GryffinBank for over five years now, and they've never let me down. Their online banking platform is user-friendly, their customer support is top-notch, and their interest rates are competitive. Keep up the great work, GryffinBank!</p>
