--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,6 +36,12 @@ body {
   font-style: italic;
 }
 
+.main-container {
+  padding-top: 25px;
+  width: 80%;
+  margin: 0 auto;
+}
+
 .title {
   text-align: center;
   text-transform: uppercase;
@@ -62,7 +68,7 @@ body {
 
 hr {
   width: 100%;
-  height: 2px;
+  height: 1.5px;
   background-color: #000;
   border: none;
 }
