Added the loan page and logging in and out

--- a/src/app/base-layout/base-layout.component.html
+++ b/src/app/base-layout/base-layout.component.html
@@ -12,6 +12,7 @@
         <button mat-button routerLink="/loan">Loans</button>
         <button mat-button routerLink="/about">About</button>
         <button mat-button routerLink="/contact">Contact Us</button>
+        <button mat-button (click)="logOut()">Log Out</button>
       </div>
     </div>
   </mat-toolbar-row>
