--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,6 +42,13 @@ body {
   margin: 0 auto;
 }
 
+.logo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+}
+
 .title {
   text-align: center;
   text-transform: uppercase;
